@@ -130,62 +130,4 @@ static NSMutableArray *yearMenuItems = nil;
   return response;
 }
 
-- (NSString *) _rightsForUIDs: (NSString *) uids
-{
-  NSEnumerator *ids;
-  NSString *uid;
-  NSMutableString *rights;
-  SOGoAppointmentFolder *refFolder, *currentFolder;
-  SoSecurityManager *securityManager;
-  BOOL result;
-
-  securityManager = [SoSecurityManager sharedSecurityManager];
-  refFolder = [self clientObject];
-
-  rights = [NSMutableString string];
-  if ([uids length] > 0)
-    {
-      ids = [[uids componentsSeparatedByString: @","] objectEnumerator];
-      uid = [ids nextObject];
-      while (uid)
-        {
-          currentFolder
-            = [refFolder
-                lookupCalendarFolderForUID: (([uid hasPrefix: @"-"])
-                                             ? [uid substringFromIndex: 1]
-                                             : uid)];
-          result = (![securityManager validatePermission: SoPerm_AccessContentsInformation
-                                      onObject: currentFolder
-                                      inContext: context]);
-          if ([rights length] == 0)
-            [rights appendFormat: @"%d", result];
-          else
-            [rights appendFormat: @",%d", result];
-          uid = [ids nextObject];
-        }
-    }
-
-  return rights;
-}
-
-- (id <WOActionResults>) checkRightsAction
-{
-  WOResponse *response;
-  NSUserDefaults *ud;
-  NSString *uids, *rights;
-
-  ud = [[context activeUser] userDefaults];
-  uids = [ud stringForKey: @"calendaruids"];
-
-  response = [context response];
-  [response setStatus: 200];
-  [response setHeader: @"text/plain; charset=\"utf-8\""
-            forKey: @"content-type"];
-
-  rights = [self _rightsForUIDs: uids];
-  [response appendContentString: rights];
-
-  return response;
-}
-
 @end
